fix exam dropdown flickering

--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -1371,3 +1371,7 @@ td.cell.dfm-py-16.float-end.dfm-px-12 {
   }
 
 // ===== Scroll bar UI- start ===== //
+
+.ap-exam-dd input {
+	padding-right: 51px !important;
+}
